--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-        <link rel="shortcut icon" type="image/x-icon" href="afton.jpg" />
+        <link rel="shortcut icon" type="image/x-icon" href="Bilder/afton.jpg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
