--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="snopp">
-        <img src="barry.PNG">
+        <img src="Bilder/barry.PNG">
     </div>
     
 </body>
